# persistshell

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MILESTONES.md  NEXT_TASK.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md
.github/workflows/: ci.yml  package.yml
completions/: _persist  persist.bash  persist.fish
crates/persist-cli/: Cargo.toml
crates/persist-cli/src/: attach.rs  cli.rs  command.rs  command_history.rs  daemon.rs  dashboard.rs  dashboard_tests.rs  installer.rs  main.rs  session.rs  session_browser.rs  session_browser_tests.rs  shell_state.rs  terminal.rs
crates/persist-cli/src/dashboard/: app.rs  app_tests.rs  runtime.rs  terminal.rs  ui.rs
crates/persist-cli/tests/: cli.rs
crates/persist-core/: Cargo.toml
crates/persist-holder/: Cargo.toml
crates/persist-holder/src/: connection.rs  lib.rs  lifecycle.rs  log_worker.rs  main.rs  reactor.rs  runtime.rs  server.rs  server_handlers.rs  socket.rs
crates/persist-holder/src/runtime/: state.rs
crates/persist-holder/tests/: lifecycle.rs  runtime.rs  runtime_advanced.rs  runtime_exit_context.rs
crates/persist-ipc/: Cargo.toml
crates/persist-metadata/: Cargo.toml
crates/persist-metadata/src/: environment.rs  lib.rs  migration.rs  schema.rs  store.rs
crates/persist-pty/: Cargo.toml
crates/persistd/: Cargo.toml
crates/persistd/src/: attach_history.rs  lifecycle.rs  log_writer.rs  main.rs  public_attach.rs  server.rs  shell_history.rs  shell_history_tests.rs
crates/persistd/src/dashboard/: aggregate.rs  format.rs  format_tests.rs  history.rs  history_tests.rs  ipc.rs  ipc_disk.rs  ipc_tests.rs  mod.rs  model.rs  model_tests.rs  proc_source.rs  procfs.rs  procfs_tests.rs  storage.rs  storage_reader.rs  storage_security.rs  storage_tests.rs  worker.rs  worker_tests.rs  writer.rs  writer_tests.rs
crates/persistd/src/holder/: client.rs  data.rs  mod.rs  process.rs  process_watch.rs  reconcile.rs  tests.rs
crates/persistd/src/holder/process_watch/: tests.rs
crates/persistd/src/holder/reconcile/: tests.rs
crates/persistd/src/public_attach/: context_timer.rs  pending_writes.rs
crates/persistd/tests/: persistd.rs  reconciliation.rs
docs/: INDEX.md
docs/adr/: ADR-0000-template.md  ADR-0001-rust-primary-language.md  ADR-0002-closed-session-recovery-context.md  ADR-0003-transient-shell-history-hooks.md  ADR-0004-bounded-performance-dashboard.md  ADR-0005-per-user-pty-holder.md  ADR-0006-final-shell-state-side-channel.md  ADR-0007-safe-dynamic-environment-recovery.md  ADR-0008-portable-linux-packages.md  ADR-0009-bounded-attach-history-replay.md
docs/ai/: HANDOFF.md  MASTER_PROMPT.md
docs/architecture/: ARCHITECTURE.md  COMPONENTS.md  IPC_PROTOCOL.md  LIFECYCLE.md  LOGGER.md  METADATA.md  PROCESS_MODEL.md  PTY_ENGINE.md  RINGBUFFER.md  SESSION_MODEL.md  SIGNAL_MODEL.md
docs/audit/: 2026-07-15-m44-security-review.md  2026-07-15-m45-compatibility-matrix.md  2026-07-15-m46-package-validation.md  2026-07-15-m47-man-page-validation.md  2026-07-15-m48-shell-completion-validation.md  2026-07-15-m49-user-doc-validation.md  2026-07-15-m50-platform-package-remote-validation.md  2026-07-15-m50-release-readiness.md  2026-07-15-phase3-validation.md  2026-07-16-m51-interactive-history-validation.md  2026-07-19-m53-pty-holder-validation.md  (+6 more)
scripts/: benchmark-dashboard.sh  benchmark-sessions.sh  check-linux-release.sh  compatibility-matrix.sh  package-release.sh  test-completions.sh  test-dynamic-environment-recovery.sh  test-final-shell-state.sh  test-holder-recovery.sh  test-installed-dynamic-environment.sh
(+105 files in other folders)
