[workspace]
members = [
    "crates/persist-cli",
    "crates/persist-core",
    "crates/persist-holder",
    "crates/persist-ipc",
    "crates/persist-metadata",
    "crates/persist-pty",
    "crates/persistd",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
authors = ["PersistShell contributors"]
repository = "https://github.com/SuPerCxyz/persistshell"
license-file = "LICENSE"

[workspace.dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
