[package]
name = "persist-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[[bin]]
name = "persist"
path = "src/main.rs"

[dependencies]
persist-core = { path = "../persist-core" }

