[package]
name = "persist-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[[bin]]
name = "persist"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
persist-core = { path = "../persist-core" }
persist-ipc = { path = "../persist-ipc" }
libc = "0.2"
ratatui = "0.29.0"
crossterm = "0.28.1"

[dev-dependencies]
tempfile = "3"
