[package]
name = "persist-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[dependencies]
persist-core = { path = "../persist-core" }
rusqlite.workspace = true
