[package]
name = "persistd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
publish = false

[[bin]]
name = "persistd"
path = "src/main.rs"

[dependencies]
persist-core = { path = "../persist-core" }
persist-ipc = { path = "../persist-ipc" }
persist-metadata = { path = "../persist-metadata" }
persist-pty = { path = "../persist-pty" }
libc = "0.2"
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
